# rust-gpu-bugs

./: Cargo.toml  README.md  result.spv-dis
buggy-shader/: Cargo.toml
buggy-shader-builder/: Cargo.toml  build.rs
buggy-shader/src/: lib.rs
